--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-12">
         <h1 class="text-uppercase">Fichas de legos</h1>
-        <p class="lead">Personaliza tus fichas como quieras.</p>
+        <p class="lead">Personaliza el modelo que deseas y obten los planos de inmediato .</p>
       </div>
 
     </div>
@@ -14,32 +14,78 @@
 <section class="bar background-gray no-mb padding-big text-center-sm">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
+        <h2 class="text-uppercase">Por donde la desees mirar! </h2>
+        <p class="lead mb-small">Presiona la imagen <span class="glyphicon glyphicon glyphicon-hand-right"></span></p>
+        <p class="mb-small">Te enviaremos a tu correo un render muy similar como este para que puedas visualizar el producto en cualquier vista.</p>
+      </div>
+      <div class="col-md-6 text-center">
 
-        <div class="col-md-4 card-content">
-          <div class="card-header-black">
-            <h2 class="card-heading">LEGOS</h2>
+        <div class="embed-container">
+          <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=e508eecf-4959-4521-88d2-92ce4b7a161c&width=580&height=326" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <hr class="style-two">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="thumbnail model">
+
+          <img class="img-responsive img-circle" src="https://i.pinimg.com/736x/bb/c9/1f/bbc91f0e05750391fef7491f0e861be6--lego-boat-lego-lego.jpg" alt="ship" style="width:80%">
+          <div class="caption text-justify">
+            <p class="lead mb-small">Este bote consta de aproximadamente mas de 10.000 piezas, obten este modelo ahora.</p>
           </div>
-          <div class="card-body">
-            <img class="img-responsive" src="https://sh-s7-live-s.legocdn.com/is/image/LEGO/5004267?$main$">
-            <p class="card-p" align="justify">
-              El proceso de construcción de una ficha de Lego esta automatizado casi en su totalidad,debido a la cantidad de fichas que se fabrican , como la precisión necesaria para fabricar una ficha por tanto es necesario crear modelos y que mejor manera de generar
-              estos modelos que apartir de un aplicativo web.Es por esto que al realizar tú cotización podras obtener modelos medianamente automatizados directamente en tu correo.
-            </p>
-            <button type="button" class="btn btn-lg btn-primary">Personaliza tu Lego</button>
+
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail model">
+          <img class="img-responsive img-circle" src="http://thenewswheel.com/wp-content/uploads/2015/06/Lego-DeLorean-630x426.png" alt="FutureCar" style="width:80%">
+          <div class="caption">
+            <p class="lead mb-small">El famoso DeLorean DMC-12, este modelo cuenta con aproximadamente 5000 piezas y tú puedes escoger su tamaño y </p>
           </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail model">
+
+          <img class="img-responsive img-circle" src="http://www.puppentoys.com/WebRoot/ce_es/Shops/940395445/53EB/2292/B87E/8A46/C56F/C0A8/8007/C703/60015-6.jpg" alt="Airplane" style="width:80%">
+          <div class="caption">
+            <p class="lead mb-small">Lorem ipsum...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!--    <div class="col-md-8 model-content">
 
 
+        <div class="model-header-blue">
+          <h1 class="model-heading">Diseño a tus medidas </h1>
         </div>
 
 
 
 
-        <div class="col-md-8 card-content">
 
 
-          <div class="card-header-blue">
-            <h1 class="card-heading">Diseño a tus medidas </h1>
+        <div class="model-body">
+
+          <div class="col-md-4">
+            <div class="over img-responsive"><a></a></div>
+          </div>
+          <div class="col-md-8 lead mb-small model-p">
+            Puedes variar el tamaño de tus legos en todas sus dimensiones, tambien puedes escoger la cantidad de legos que deseas obtener en tu cotización.
+
+
           </div>
 
 
@@ -47,49 +93,24 @@
 
 
 
-          <div class="card-body">
-
-            <div class="col-md-4">
-              <div class="over img-responsive"><a></a></div>
-            </div>
-            <div class="col-md-8 lead mb-small card-p">
-              Puedes variar el tamaño de tus legos en todas sus dimensiones, tambien puedes escoger la cantidad de legos que deseas obtener en tu cotización.
-
-
-            </div>
-
-
-
-
-
-
-
-            <div class="clearfix">
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-8 card-content">
-
-
-          <div class="card-header-blue">
-            <h2 class="card-heading">Selecciona el color de tus legos</h2>
-          </div>
-
-          <div class="box col-md-8"></div>
-          <div class="highlight"></div>
 
           <div class="clearfix">
           </div>
+        </div>
+      </div>
+
+      <div class="col-md-8 model-content">
 
 
-
+        <div class="model-header-blue">
+          <h2 class="model-heading">Selecciona el color de tus legos</h2>
         </div>
 
+        <div class="box col-md-8"></div>
+        <div class="highlight"></div>
 
-
-
-
+        <div class="clearfix">
+        </div>
 
 
 
@@ -101,6 +122,17 @@
 
 
 
+
     </div>
+
+
+
+
+
+
+
   </div>
+  </div>
+
+-->
 </section>
