--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -1,5 +1,5 @@
 <section class="bar background-image-fixed-3 no-mb color-white text-center">
-  <div class="blue-mask"></div>
+  <div class="dark-mask"></div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -11,7 +11,7 @@
   </div>
 </section>
 
-<section class="bar background-gray no-mb padding-big text-center-sm">
+<section class="background-image-fixed-2 no-mb padding-big text-center-sm">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -31,12 +31,22 @@
 
   <hr class="style-two">
 
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Album example</h1>
+      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+      <p>
+        <a href="#" class="btn btn-primary">Main call to action</a>
+        <a href="#" class="btn btn-secondary">Secondary action</a>
+      </p>
+    </div>
+  </section>
   <div class="container">
 
     <div class="row">
       <div class="col-md-4">
+        <h2 class="text-center">El Barco</h2>
         <div class="thumbnail model">
-
           <img class="img-responsive img-circle" src="https://i.pinimg.com/736x/bb/c9/1f/bbc91f0e05750391fef7491f0e861be6--lego-boat-lego-lego.jpg" alt="ship" style="width:80%">
           <div class="caption text-justify">
             <p class="lead mb-small">Este bote consta de aproximadamente mas de 10.000 piezas, obten este modelo ahora.</p>
@@ -45,6 +55,7 @@
         </div>
       </div>
       <div class="col-md-4">
+        <h2 class="text-center">El Auto</h2>
         <div class="thumbnail model">
           <img class="img-responsive img-circle" src="http://thenewswheel.com/wp-content/uploads/2015/06/Lego-DeLorean-630x426.png" alt="FutureCar" style="width:80%">
           <div class="caption">
@@ -52,7 +63,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <!--      <div class="col-md-4">
+        <h2 class="text-center">El Avión</h2>
         <div class="thumbnail model">
 
           <img class="img-responsive img-circle" src="http://www.puppentoys.com/WebRoot/ce_es/Shops/940395445/53EB/2292/B87E/8A46/C56F/C0A8/8007/C703/60015-6.jpg" alt="Airplane" style="width:80%">
@@ -61,9 +73,32 @@
           </div>
         </div>
       </div>
-    </div>
 
+  -->
+      <div class="col-sm-4">
+        <div class="box-image">
+          <div class="image">
+            <img src="http://www.puppentoys.com/WebRoot/ce_es/Shops/940395445/53EB/2292/B87E/8A46/C56F/C0A8/8007/C703/60015-6.jpg" alt="Airplane" alt="" class="img-responsive">
+          </div>
+          <div class="bg"></div>
+          <div class="name">
+            <h3><a href="portfolio-detail.html">Portfolio box-image</a></h3>
+          </div>
+          <div class="text">
+            <p class="buttons">
+              <a href="portfolio-detail.html" class="btn btn-template-transparent-primary">View</a>
+              <a href="#" class="btn btn-template-transparent-primary">Website</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+
+  <!-- /.box-image -->
+
+
 
   <!--    <div class="col-md-8 model-content">
 
