[Puertas] feat slider [Home] terminado los datos e imagenes

--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -1,4 +1,80 @@
+<section class="bar background-image-fixed-3 no-mb color-white text-center ">
+  <div class="dark-mask"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="text-uppercase">Puertas Automaticas</h1>
+        <p class="lead">Tenemos excelentes diseños de puertas y sellos industriales.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+<section class="bar background-gray no-mb padding-big text-center-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="text-uppercase">Por donde la desees mirar! </h2>
+        <p class="lead mb-small">Presiona la imagen <span class="glyphicon glyphicon glyphicon-hand-right"></span></p>
+        <p class="mb-small">Te enviaremos a tu correo un render muy similar a este para que puedas visualizar el producto por cualquier lugar.</p>
+
+
+
+
+
+      </div>
+      <div class="col-md-6 text-center">
+
+        <div class="embed-container">
+          <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=6196ebb665daaf1a99e70de063b51884&width=580&height=326" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 <div class="container">
-    <h1>Reactive Forms</h1>
-    <hero-list></hero-list>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-3">
+
+      <figure class="icon-cards">
+        <div class="icon-cards__content">
+          <div class="icon-cards__item"></div>
+          <div class="icon-cards__item"></div>
+          <div class="icon-cards__item"></div>
+        </div>
+      </figure>
+
+    </div>
+
+    <div class="col-md-5">
+      <div class="tabs">
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#tab4-1" data-toggle="tab"><i class="icon-star"></i>Puerta Enrrollable </a>
+          </li>
+          <li class=""><a href="#tab4-2" data-toggle="tab">Sellos de Carga</a>
+          </li>
+          <li><a href="#tab4-3" data-toggle="tab">Puerta Corrediza</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="tab4-1">
+            Puedes personalizar el color de los paneles y el tamaño.
+          </div>
+          <div class="tab-pane" id="tab4-2">
+            Existen productos que deben viajar bajo ciertas condiciones de almacenamiento entre ellos algunos exigen que deban estar aislados de ambientes no controlados, estos sellos permiten estas condiciones
+          </div>
+          <div class="tab-pane" id="tab4-3">
+            Las puertas corredizas son muy utiles en lugares donde el espacio permite que la puerta sea levantada de manera horizontal siendo asi este modelo de puerta es el optimo para el ingreso de vehiculos de carga.
+          </div>
+        </div>
+        <!-- /.tab-content -->
+      </div>
+      <!-- /.tabs -->
+    </div>
+
+  </div>
 </div>
