--- a/src/app/pages/products/legos/legos.component.css
+++ b/src/app/pages/products/legos/legos.component.css
@@ -36,7 +36,7 @@
 }
 
 .bar.background-image-fixed-3 {
-  background: url('https://c1.staticflickr.com/4/3539/5848267059_d682665616_b.jpg') center top no-repeat;
+  background: url('http://thewallpaper.co/wallup.php?src=wp-content/uploads/2016/10/Lego-Backgrounds-For-Desktop-hd-background-wallpapers-free-amazing-cool-tablet-smart-phone-high-definition-1920x1080.jpg&w=1024&h=768&isim=wallup-254634.jpg') center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
