--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -33,8 +33,10 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Album example</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+      <h1 class="jumbotron-heading">los Modelos </h1>
+      <p class="lead text-muted">
+        Tenemos impresioanantes modelos creados a partir de las famosas fichas de Lego. Ademas puedes personalizar los modelos a tu gusto.
+      </p>
       <p>
         <a href="#" class="btn btn-primary">Main call to action</a>
         <a href="#" class="btn btn-secondary">Secondary action</a>
@@ -44,37 +46,49 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-4">
-        <h2 class="text-center">El Barco</h2>
-        <div class="thumbnail model">
-          <img class="img-responsive img-circle" src="https://i.pinimg.com/736x/bb/c9/1f/bbc91f0e05750391fef7491f0e861be6--lego-boat-lego-lego.jpg" alt="ship" style="width:80%">
-          <div class="caption text-justify">
-            <p class="lead mb-small">Este bote consta de aproximadamente mas de 10.000 piezas, obten este modelo ahora.</p>
+      <div class="col-sm-4">
+        <div class="box-image">
+          <div class="image">
+            <img src="https://i.pinimg.com/736x/bb/c9/1f/bbc91f0e05750391fef7491f0e861be6--lego-boat-lego-lego.jpg" alt="Airplane" alt="" class="img-responsive">
           </div>
-
-        </div>
-      </div>
-      <div class="col-md-4">
-        <h2 class="text-center">El Auto</h2>
-        <div class="thumbnail model">
-          <img class="img-responsive img-circle" src="http://thenewswheel.com/wp-content/uploads/2015/06/Lego-DeLorean-630x426.png" alt="FutureCar" style="width:80%">
-          <div class="caption">
-            <p class="lead mb-small">El famoso DeLorean DMC-12, este modelo cuenta con aproximadamente 5000 piezas y tú puedes escoger su tamaño y </p>
+          <div class="bg"></div>
+          <div class="name">
+            <h3><a href="portfolio-detail.html">Pirate Ship</a></h3>
           </div>
-        </div>
-      </div>
-      <!--      <div class="col-md-4">
-        <h2 class="text-center">El Avión</h2>
-        <div class="thumbnail model">
-
-          <img class="img-responsive img-circle" src="http://www.puppentoys.com/WebRoot/ce_es/Shops/940395445/53EB/2292/B87E/8A46/C56F/C0A8/8007/C703/60015-6.jpg" alt="Airplane" style="width:80%">
-          <div class="caption">
-            <p class="lead mb-small">Lorem ipsum...</p>
+          <div class="text">
+            <p>
+              Este bote consta de aproximadamente mas de 10.000 piezas, obten este modelo ahora.
+            </p>
+            <p class="buttons">
+              <a href="portfolio-detail.html" class="btn btn-template-transparent-primary">View</a>
+              <a href="#" class="btn btn-template-transparent-primary">Website</a>
+            </p>
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+        <div class="box-image">
+          <div class="image">
+            <img src="http://thenewswheel.com/wp-content/uploads/2015/06/Lego-DeLorean-630x426.png" alt="FutureCar" alt="" class="img-responsive">
+          </div>
+          <div class="bg"></div>
+          <div class="name">
+            <h3><a href="#">DeLorean DMC-12</a></h3>
+            <p>
+              Este modelo cuenta con aproximadamente 5000 piezas y tú puedes escoger su tamaño y color.
+            </p>
+          </div>
 
-  -->
+          <div class="text">
+            <p class="buttons">
+              <br>
+              <br>
+              <a href="portfolio-detail.html" class="btn btn-template-transparent-primary">View</a>
+              <a href="#" class="btn btn-template-transparent-primary">Website</a>
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4">
         <div class="box-image">
           <div class="image">
@@ -82,7 +96,7 @@
           </div>
           <div class="bg"></div>
           <div class="name">
-            <h3><a href="portfolio-detail.html">Portfolio box-image</a></h3>
+            <h3><a href="portfolio-detail.html">Coastguard plane</a></h3>
           </div>
           <div class="text">
             <p class="buttons">
