--- a/src/app/pages/products/machinery/machinery.component.html
+++ b/src/app/pages/products/machinery/machinery.component.html
@@ -18,6 +18,16 @@
         <h2 class="text-uppercase">Por donde la desees mirar! </h2>
         <p class="lead mb-small">Presiona la imagen <span class="glyphicon glyphicon glyphicon-hand-right"></span></p>
         <p class="mb-small">Te enviaremos a tu correo un render muy similar como este para que puedas visualizar el producto por cualquier lugar.</p>
+        <p class="lead mb small">Ademas podras escuchar el vehiculo encendido</p>
+        <div class="text-center">
+          <audio id="audio-player" src="https://trello-attachments.s3.amazonaws.com/59c180c9df975fa33b73f7aa/59f98e6c05380dffe055dd02/c73cf8d6ba9c75976d1ff969ca5759e3/tractor.mp3" controls loop>
+               Your browser does not support the <code class="player" >audio</code> element.
+             </audio>
+        </div>
+
+
+
+
       </div>
       <div class="col-md-6 text-center">
 
