--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -1,9 +1,9 @@
 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-  <h1 class="page-header">Cotiza ahora!</h1>
+  <h1 class="page-header">Formulario De Cotización  </h1>
+  <p class="lead mb-small">Llegaste al lugar correcto!</p>
   <p class="text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+    Ahora podras personalizar como desees tu producto,rellena el formulario a tu gusto el y al finalizar enviaremos el producto con sus planos personalizados al correo que nos has provisto.Solo se permite un producto por cotización,debido a esto cada vez
+    que presiónes en el boton de cotizar al finalizar el formulario empezaremos a procesar tu solicitud y en cuanto termine te sera entregada en tu correo.</p>
   <div class="clearfix"></div>
   <br>
 
