--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,23 +1,27 @@
-h3{
-    color: aliceblue;
-    
+h3 {
+  color: aliceblue;
 }
 
-.size-image{
-    width: 70vh;
-    height: auto;
+.size-image {
+  width: 70vh;
+  height: auto;
 }
 
-.carousel{
-    background: #808080;
-    margin-top: 20px;
+.carousel {
+  background: #808080;
+  margin-top: 20px;
 }
-.carousel .item{
-    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+
+.carousel .item {
+  min-height: 280px;
+  /* Prevent carousel from being distorted if for some reason image doesn't load */
 }
-.carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
+
+.carousel .item img {
+  margin: 0 auto;
+  /* Align slide image horizontally center */
 }
-.bs-example{
-	margin: 20px;
-}    
+
+.bs-example {
+  margin: 20px;
+}
