--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,12 +20,12 @@ _________________________________________________________ -->
         </div>
 
         <div class="col-sm-6 text-center-xs">
-          <p class="text-uppercase">Business. Corporate. Agency.
-            <br />Portfolio. Blog. E-commerce.
-            <br />We have covered everything.</p>
-          <p>See our current packages comparison
-            <br />to choose the right one for you.</p>
-          <p><a href="#packages" class="scroll-to btn btn-template-transparent-black">See packages</a>
+          <p class="text-uppercase">Diseños a la medida en instantes.
+            <br />Planos automatizados en todo momento.
+            <br />Analisis de maquinaria detallado.</p>
+          <p>Nuestros modelos incluyen todo lo necesario
+            <br />para que decidas comprarlos.</p>
+          <p><a href="#packages" class="scroll-to btn btn-template-transparent-black">Cotiza Ahora!</a>
           </p>
 
         </div>
@@ -41,11 +41,11 @@ _________________________________________________________ -->
     <div class="row">
       <div class="col-md-6">
         <h2 class="text-uppercase">RELLENA EL FORMULARIO</h2>
-        <p class="lead mb-small">40+ prepared HTML templates</p>
-        <p class="mb-small">We have prepared literally <strong>everything you would possibly need building corporate, e-commerce or portfolio website</strong>. If you still miss something, let us know and we will try to include it in theme's future updates.</p>
-
-        <p><a href="#" class="btn btn-template-main">Read more</a>
+        <p class="lead mb-small">Personaliza tu producto</p>
+        <p class="mb-small">Puedes personalizar tu producto en diferentes aspectos como lo son <strong>color, dimensiones y cantidad de ciertos articulos</strong>. Para que podamos retornarte el resultado de tu cotizacion es necesario que te <strong>registres</strong> en
+          nuestra base de datos.
         </p>
+
       </div>
       <div class="col-md-6 text-center">
         <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
@@ -63,10 +63,8 @@ _________________________________________________________ -->
       <div class="col-md-6">
         <h2 class="text-uppercase">Espera unos segundos </h2>
         <p class="lead mb-small">Nuestro sistema automatizado iniciara tan pronto pueda a resolver tu solicitud</p>
-        <p class="mb-small">Everything in this template is properly named and categorized. In case you don't find in the documentation answer to your question, our support is here to help!</p>
+        <img src="http://gifgifs.com/animations/computers-technology/gears/Gears_spin.gif" border=0 />
 
-        <p><a href="#" class="btn btn-template-transparent-primary">Read more</a>
-        </p>
       </div>
     </div>
   </div>
@@ -77,197 +75,117 @@ _________________________________________________________ -->
     <div class="row">
       <div class="col-md-6">
         <h2 class="text-uppercase">Revisa tu bandeja de entrada</h2>
-        <p class="mb-small">We have made this template with focus on future client customization. You get <strong>40+ prepared HTML templates</strong>, many <strong>reusable components</strong> and <strong>LESS files</strong> for even easier template customization.</p>
+        <p class="mb-small">Cuando nuestro sistema termina de procesar tu solicitud te enviara un correo electronico con la cotización al correo con el cual estas registrado.Por tanto usa un correo valido para que posteriormente puedas visualizar la cotización.
+          <strong>Si no estas registrado sigue el boton de abajo.</strong></p>
 
-        <p><a href="#" class="btn btn-template-main">Read more</a>
+        <p><a href="#" class="btn btn-template-main">Registrate Ahora!</a>
         </p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="bar background-white no-mb" id="packages">
-  <div class="container" data-animate="fadeInUp">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="heading text-center">
-          <h2>Packages we offer</h2>
-        </div>
-
-        <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
-        <div class="row packages">
-
-          <div class="col-md-3">
-            <div class="package ">
-              <div class="package-header light-gray">
-                <h5>Basic</h5>
-              </div>
-              <div class="price">
-                <div class="price-container">
-                  <h4><span class="currency">$</span>7</h4>
-                  <span class="period">
-
-/ month
-
-</span>
-                </div>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-            </div>
-          </div>
-          <!-- / END FIRST PACKAGE -->
-
-          <div class="col-md-3">
-            <div class="package ">
-              <div class="package-header light-gray">
-                <h5>Standard</h5>
-              </div>
-              <div class="price">
-                <div class="price-container">
-                  <h4><span class="currency">$</span>21 </h4>
-                  <span class="period">/ month</span>
-                </div>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="best-value">
-              <div class="package">
-                <div class="package-header">
-                  <h5>Premium</h5>
-                  <div class="meta-text">
-                    Best Value
-                  </div>
-                </div>
-                <div class="price">
-                  <h4><span class="currency">$</span>53</h4>
-                  <span class="period">/ month</span>
-                </div>
-                <ul>
-                  <li><i class="fa fa-check"></i>100GB Storage</li>
-                  <li><i class="fa fa-check"></i>Own config file</li>
-                  <li><i class="fa fa-times"></i>Sharing Tools</li>
-                  <li><i class="fa fa-times"></i>Auto Backup</li>
-                  <li><i class="fa fa-times"></i>Extended Security</li>
-                </ul>
-                <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="package">
-              <div class="package-header light-gray">
-                <h5>Ultimate</h5>
-              </div>
-              <div class="price">
-                <h4><span class="currency">$</span>99 </h4>
-                <span class="period">/ month</span>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-            </div>
-          </div>
-        </div>
-
+        <img src="assets/img/template-easy-customize2.png" alt="" class="img-responsive">
       </div>
     </div>
   </div>
 </section>
 
 
-<div class="bs-example">
+
+<div class="row same-height-row bar background-gray no-mb padding-big text-center-sm">
+  <div class="heading text-center">
+    <h1>Los Equipos </h1>
+  </div>
+  <div class="container">
+    <div class="col-md-4">
+      <div class="box-simple box-dark same-height" style="height: 319px;">
+        <div class="icon">
+          <i class="fa fa-desktop"></i>
+        </div>
+        <h3>Webdesign</h3>
+        <p class="text-justify">Puedes acceder a nuestros productos desde la internet debido al trabajo de este equipo, ellos son los encargados de generar posibilitar que entiendas nuestros productos por tanto si tienes sugerencias o dudas sobre su trabajo no dudes en enviarnos
+          un email.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="box-simple box-dark same-height" style="height: 319px;">
+        <div class="icon">
+          <i class="fa fa-print"></i>
+        </div>
+        <h3>Automation</h3>
+        <p class="text-justify">Al parecer hacemos magia,pero en realidad es necesario procesar cada una de las solicitudes que nos generas, juntarlas en un documento y responderte lo mas pronto posible.Este equipo realiza esas actividades asi que si tienes dudas o sugerencias
+          acerca de su trabajo con gusto seran atendidas y en la medida de lo posible implementadas.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="box-simple box-dark same-height" style="height: 319px;">
+        <div class="icon">
+          <i class="fa fa-cogs" aria-hidden="true"></i>
+        </div>
+        <h3>Products</h3>
+        <p class="text-justify">Los modelos y diseños personalizados son creados en estos equipos, puedes conocer que genera ca da uno de ellos en la sección de productos.<strong>En la parte superior seleccion un equipo y en cada uno de ellos se te describe el producto que podras recibir.</strong></p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="bs-example">
     <div id="myCarousel" class="carousel slide" data-interval="2000" data-ride="carousel">
-    	<!-- Carousel indicators -->
-        
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-            <div class="active item">
-                <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png" alt="First Slide">
-         		<div class="carousel-caption">
-                  
-                  <h3>Angular 4</h3>
-                  
-                  
-                </div>
-            </div>
-            <div class="item">
-                <img class ="size-image" src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png" alt="Second Slide">
-                <div class="carousel-caption">
-                  
-                  <p>El lenguaje de programación simple y libre.</p>
-                  
-                </div>
-            </div>
-            <div class="item">
-                <img    src="http://kforce.org.nz/thumbs/2000x2000r/2016-12/auto_desk_inventor.png" alt="Third Slide">
-                <div class="carousel-caption">
-              
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-            </div>
+      <!-- Carousel indicators -->
+
+      <!-- Wrapper for carousel items -->
+      <div class="carousel-inner">
+        <div class="active item">
+          <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png" alt="First Slide">
+          <div class="carousel-caption">
+
+            <h3>Angular 4</h3>
+
+
+          </div>
         </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+        <div class="item">
+          <img class="size-image" src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png" alt="Second Slide">
+          <div class="carousel-caption">
+
+            <p>El lenguaje de programación simple y libre.</p>
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="https://lh3.googleusercontent.com/Dq-mZ5mmdE6aFPeD61DNlVTwYSI75UwHBYDq_BxBZOMSzCBnQ5OCC4-LjfP42tDlyw=w300" alt="Third Slide">
+          <div class="carousel-caption">
+
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel controls -->
+      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <a class="carousel-control right" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div>
-</div>
-
-
-
-
-<section class="bar background-image-fixed-2 no-mb color-white text-center">
-  <div class="dark-mask"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="icon icon-lg"><i class="fa fa-file-code-o"></i>
-        </div>
-        <h1>Do you want to see more?</h1>
-        <p class="lead">We have prepared for you more than 40 different HTML pages, including 5 variations of homepage.</p>
-        <p class="text-center">
-          <a href="index3.html" class="btn btn-template-transparent-black btn-lg">Check other homepage</a>
-        </p>
-      </div>
-
-    </div>
   </div>
-</section>
+
+
+
+
+  <section class="bar background-image-fixed-2 no-mb color-white text-center">
+    <div class="dark-mask"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="icon icon-lg"><i class="fa fa-file-code-o"></i>
+          </div>
+          <h1>Deseas saber algo mas?</h1>
+          <p class="lead">Dirigete a la seeccón de contacto y dejanos un mensaje.</p>
+          <p class="text-center">
+            <a href="#" class="btn btn-template-transparent-black btn-lg">Contacto</a>
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
